# tapedeck-player

./: .gitmodules  Cargo.toml  README.md  input.bsq  play.sh  tapedeck.bsq
.cargo/: config  main.cpp.bak
